--- a/sass/grid/_grid.scss
+++ b/sass/grid/_grid.scss
@@ -36,6 +36,7 @@ body {
     }
 
     p {
+        line-height: 2.5rem;
         color: $color--blue--grayish;
     }
 }
@@ -80,6 +81,9 @@ body {
     background-color: $color--cyanDark--primary;
     h2 {
         padding-bottom: 2rem;
+    }
+    p {
+        padding-bottom: 0.2rem;
     }
 }
 
